samples/_failures_safe/1761658396_187534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_741bd1c4.c: In function ‘main’:
./samples/SAFE/__tmp_741bd1c4.c:153:13: error: expected declaration or statement at end of input
  153 |             cleanup_state_machine(sm);
      |             ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_741bd1c4.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_741bd1c4.c:153:13: error: expected declaration or statement at end of input
